# dagu-first-contact

./: .env.example  .gitignore  OPEN-ISSUES.md  README.md  SPECIFICATION.md  WORKFLOW.md  pyproject.toml  references.yaml
.old-spec/: conventions.md  open-questions.md  risks.md
.plan/: README.md  WP-01-project-skeleton.md  WP-02-frontmatter-helper.md  WP-03-validation-foundation.md  WP-04-import-git.md  WP-05-import-spreadsheets.md  WP-06-import-pdfs.md  WP-07-import-jira.md  WP-08-jira-json-to-markdown.md  WP-09-spreadsheet-converter-runner.md  WP-10-agent-spreadsheet-to-requirements.md  WP-11-agent-rfp-to-markdown.md  WP-12-agent-system-summary.md  WP-13-agent-interaction-model.md  WP-14-agent-suggested-boundaries.md  WP-15-materialize-subdomains.md  WP-16-agent-subdomain-summary.md  WP-17-agent-root-domain-summary.md  WP-18-agent-requirements-extraction.md  WP-19-agent-requirements-mapping.md  WP-20-agent-requirements-status.md  WP-21-agent-conflict-detection.md  WP-22-agent-conflict-resolutions.md  WP-23-agent-roadmap.md  WP-24-agent-final-report.md  WP-25-dagu-00-import.md  WP-26-dagu-10-normalize.md  WP-27-dagu-20-domain-analysis.md  WP-28-dagu-30-domain-boundaries.md  WP-29-dagu-40-requirements-analysis.md  WP-30-dagu-90-final-report.md  WP-31-dagu-main.md  WP-32-mvp-fixtures-and-smoke.md  WP-33-sidecar-watcher.md
ops/: __init__.py  _artifact.py  validate_artifacts.py
schemas/: frontmatter.schema.json  references.schema.json
spec/: PENDING.md  README.md  conventions.md  glossary.md  open-questions.md  principles.md  risks.md
tests/: test_artifact.py  (+1 more)
(+91 files in other folders)
